--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
     <head>
         <!--Import Google Icon Font-->
@@ -11,7 +11,7 @@
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-      <meta http-equiv="Content-Language" content="pt-br">
+      <meta http-equiv="Content-Language" content="en">
     </head>
   <body>
 
