--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <meta http-equiv="Content-Language" content="en">
+      <title>The Ginger Techie</title>
       <link rel="shortcut icon" href="../assets/images/title.ico" />
     </head>
   <body>
