--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -125,3 +125,10 @@ section {
 .post-date {
     font-size: 0.8em;
 }
+
+.githubAvatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+  display: inline;
+}
