--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -9,11 +9,11 @@ $teal: #009688;
   padding: 0;
 }
 
-ul li{
+.post-content ul li{
   list-style-type: circle !important;
 }
 
-ul{
+.post-content ul{
   padding-left:25px !important;
 }
 
