--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,10 @@
       <meta http-equiv="Content-Language" content="en">
       <title>The Ginger Techie</title>
       <link rel="shortcut icon" href="../assets/images/title.ico" />
+
+      {% if site.google_analytics and jekyll.environment == 'production' %}
+        {% include analytics.html %}
+      {% endif %}
     </head>
   <body>
 
