--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,23 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <meta http-equiv="Content-Language" content="en">
+      <meta name="author" content="Kara Waldemer" />
+      <meta property="og:title"
+        content="{% if page.title %}
+          {{ page.title | strip_html | strip_newlines | truncate: 160 }}
+        {% else %}
+          {{ site.title }}
+        {% endif %}">
+      <meta property="og:description"
+          content="{% if page.excerpt %}
+              {{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}
+            {% else %}
+              {{ site.description }}
+            {% endif %}">
+      {% if page.image %}
+        <meta property="og:image" content="{{page.image}}" />
+      {% endif %}
+      
       <title>The Ginger Techie</title>
       <link rel="shortcut icon" href="../assets/images/title.ico" />
     </head>
