styling for posts

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -36,6 +36,14 @@ section {
     }
 }
 
+.container {
+  .project-page {
+    width: 100% !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+
 .markdown-file {
     .author {
         color: $teal;
