--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -23,7 +23,7 @@ layout: default
             <br>
 
             <div class="container">
-                <div class="container markdown-file post-content" itemprop="articleBody">
+                <div class="project-page markdown-file post-content" itemprop="articleBody">
                     <div class="post">
                         {{ content }}
                     </div>
