--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -14,7 +14,8 @@ layout: default
 
         <div class="container markdown-file">
           <div class="about">
-            {% for project in site.projects %}
+            {% assign sorted = (site.projects | sort: 'date') | reverse %}
+            {% for project in sorted %}
             <ul class="collection with-header">
               <li class="collection-header">
                 <div>
