trying to play with style

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -36,6 +36,12 @@ section {
     }
 }
 
+pre {
+  .highlight {
+    background-color: '#f6f8fa',
+  }
+}
+
 .container {
   .project-page {
     width: 100% !important;
