--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
       <!--Import css files-->
-      <link rel="stylesheet" href="{{ site.github.url }}/assets/css/styles.css">
-      <link rel="stylesheet" href="{{ site.github.url }}/assets/css/materialize.css">
+      <link rel="stylesheet" href="http://localhost:4000/assets/css/styles.css">
+      <link rel="stylesheet" href="http://localhost:4000/assets/css/materialize.css">
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
