--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,7 +8,7 @@ layout: default
         <section class="v100">
             <br>
             <div class="post-header">
-                <h2 class="center-align teal-text post-title" itemprop="name headline">{{ project.title }}</h2>
+                <h2 class="center-align teal-text post-title" itemprop="name headline">{{ page.title }}</h2>
             </div>
 
             <div class="container markdown-file">
